RESOLVED FIXED 278749
REGRESSION (281966@main): Unable to drag images from Photos into Mail compose on macOS
https://bugs.webkit.org/show_bug.cgi?id=278749
Summary REGRESSION (281966@main): Unable to drag images from Photos into Mail compose...
Wenson Hsieh
Reported 2024-08-27 16:04:50 PDT
Attachments
Wenson Hsieh
Comment 1 2024-08-27 16:13:41 PDT
EWS
Comment 2 2024-08-27 22:04:46 PDT
Committed 282828@main (59cdc6c75694): <https://commits.webkit.org/282828@main> Reviewed commits have been landed. Closing PR #32785 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.